Testing some alternate JVM flags for performance